--- a/config/setup/yurt-tunnel-agent.yaml
+++ b/config/setup/yurt-tunnel-agent.yaml
@@ -26,7 +26,7 @@ spec:
       - command:
         - yurt-tunnel-agent
         args:
-        - --cluster-name=cls-t8gz6mgd.kube-system.svc
+        - --cluster-name=cls-gd97k5dx
         - --apiserver-addr=132.232.31.102:31501
         - --tunnelserver-addr=132.232.31.102:31502
         - --v=4
@@ -60,7 +60,7 @@ data:
 apiVersion: v1
 kind: Service
 metadata:
-   name: cls-t8gz6mgd
+   name: cls-gd97k5dx
    namespace: kube-system
 spec:
   selector:
